# libgovirt

./: TODO-meson  meson.build
govirt/: Makefile.am  govirt-private.h  meson.build  ovirt-cdrom.c  ovirt-collection.c  ovirt-proxy-private.h  ovirt-proxy.c  ovirt-resource.c
po/: meson.build
tests/: meson.build
